# TDisplayLightMeter

TDisplaySLS/: CMakeLists.txt  LV_Helper.cpp  LV_Helper.h  SquareLine_Project.sll  SquareLine_Project.spj  TDisplaySLS.ino  ui.h  ui_font_big.c  ui_img_1932778759.c  ui_img_85708210.c
TDisplaySLS/UI/: filelist.txt  ui.c  ui_Screen1.c  ui_helpers.c  ui_helpers.h  ui_img_117657630.c  ui_img_125158209.c  ui_img_1292625414.c  ui_img_166767699.c  ui_img_682691754.c
TDisplaySLS/assets/: ui_font_big.fcfg  ui_font_numbers.c  ui_font_numbers.fcfg  ui_font_small.c  ui_font_small.fcfg
