SET(SOURCES ui_Screen1.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_166767699.c
    ui_img_125158209.c
    ui_img_682691754.c
    ui_img_1292625414.c
    ui_img_85708210.c
    ui_img_1932778759.c
    ui_img_117657630.c
    fonts/ui_font_big.c
    fonts/ui_font_numbers.c
    fonts/ui_font_small.c)

add_library(ui ${SOURCES})
